Push Final Product

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,18 +10,4 @@ spring.jpa.defer-datasource-initialition=true
 spring.h2.console.path=/h2
 spring.h2.console.setting.trace=false
 spring.h3.console.enabled=true
-
-
-#spring.datasource.url=jdbc:h2:mem:TotpDB
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.defer-datasource-initialization=true
-#
-#
-#
-#spring.h2.console.path=/h2-console
-#spring.h2.console.settings.trace=false
-#spring.h2.console.settings.web-allow-others=false
-#spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
